# jrpk

./: .gitignore  Cargo.toml  Dockerfile  Makefile  consume.sh  datasources.yaml  docker-compose.yaml  jrpk.puml  produce.sh  prometheus.yaml
doc/: arguments.ods  arguments.txt  jrpk.puml
scripts/: http-consume.sh  http-offset.sh  http-produce.sh  jsonrpc-consume.sh  jsonrpc-produce.sh  prometheus.yaml
src/: args.rs  client.rs  codec.rs  consume.rs  error.rs  errors.rs  http.rs  jsonrpc.rs  kafka.rs  main.rs  metrics.rs  model.rs  produce.rs  serde.rs  serve.rs  server.rs  size.rs  tests.rs  util.rs
tests/: tests.rs
