[package]
name = "jrpk"
version = "0.0.1"
edition = "2021"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
prometheus-client = "0.24.0"
hyper = { version = "1.7.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.17", features = ["client", "http1", "tokio"] }
http-body-util = "0.1.3"
clap = { version = "4.5.26", features = ["derive"] }
bytes = "1.10.1"
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
tokio-util = { version = "0.7.15", features = ["full", "codec"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["raw_value"] }
serde_valid = "2.0.0"
rskafka = "0.6.0"
moka = { version = "0.12.10", features = ["future", "async-lock", "sync"] }
hex = "0.4.3"
thiserror = "2.0.15"
chrono = { version = "0.4.41", features = ["now", "serde"] }
socket2 = "0.6.0"
bytesize = "2.0.1"
base64 = "0.22.1"
ustr = { version = "1.1.0", features = ["serde"] }
log = "0.4.27"
