[package]
name = "jrpk"
version = "0.0.1"
edition = "2021"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
prometheus-client = "0.24.0"
hyper = { version = "1.7.0", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1.17", features = ["client", "http1", "tokio"] }
http-body-util = "0.1.3"
clap = { version = "4.5.26", features = ["derive"] }
clap-duration = "0.1.11"
duration-human = "0.1.10"
bytes = "1.10.1"
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
tokio-util = { version = "0.7.15", features = ["full", "codec"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["raw_value"] }
serde_valid = "2.0.0"
rskafka = "0.6.0"
moka = { version = "0.12.10", features = ["future", "async-lock", "sync"] }
hex = "0.4.3"
thiserror = "2.0.15"
chrono = { version = "0.4.41", features = ["now", "serde"] }
socket2 = "0.6.0"
bytesize = "2.0.1"
base64 = "0.22.1"
log = "0.4.27"
faststr = { version = "0.2.32", features = ["serde"] }
strum = { version = "0.27.2", features = ["derive"] }
axum = "0.8.7"
axum-streams = { version = "0.24.0", features = ["json", "text"] }
reqwest = "0.12.24"
tower-http = { version = "0.6.8", features = ["trace"] }
